[package]
name = "rps_onchain"
version = "0.1.0"
description = "On-chain Rock-Paper-Scissors with FIFO matchmaking, commit-reveal, and session-key auto-reveal"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rps_onchain"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
